lmdbjava works on M1 now